...
        app:passwordToggleEnabled="true"
        style="@style/TextInputTheme"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:inputType="textPassword"
            />

...
            android:text="@string/cancel"
            android:textSize="14sp"
            style="@style/ButtonStyleDelete"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/ok"
...
