...
    <string name="action_bar_admin_settings">%1$s &gt; Admin Settings</string>
    <string name="admin_settings">Admin Settings</string>

    <string name="admin_access_settings">Tap for admin access to settings</string>
    <string name="user_access_preferences">User can change General Settings items:</string>

    <string name="admin_password_settings_summary">Admin password Enabled. Click to change admin password</string>
    <string name="admin_password_disabled_click_to_set">No Admin password. Click to enable.</string>
    <string name="admin_password_settings">Admin Password</string>
    <string name="admin_password">Admin Password</string>
    <string name="user_restrictions">Restrictions</string>
    <string name="enable_user_restrictions">Enable user restrictions</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="enable_admin_password">Enable Admin Password</string>

    <string name="enter_admin_password">Enter Admin password:</string>

...
